# path-k8s-webhook

./: .dockerignore  .gitignore  Cargo.toml  Containerfile  README.md  Taskfile.yaml  Tiltfile  test.json  webhook.yaml
.cargo/: config.toml
src/: cli.rs  helper.rs  helpers.rs  ingress.rs  k8s_renew_watch.rs  main.rs  mutation.rs  tls_cert_resolver.rs  types.rs  validation.rs  webhook.rs
tests/: kustomization.yaml  test.yaml  webhook.yaml
