[package]
name = "path-k8s-webhook"
edition = "2024"
version = "2026.7.10"
description = "Kubernetes AdmissionControl webhook to validate or mutate specified resource via JSON path"
license = "Apache-2.0"
repository = "https://github.com/Magicloud/path-k8s-webhook"
keywords = ["Kubernetes", "Webhook"]
categories = ["config"]
readme = "README.md"

[profile.release]
strip = true
lto = true
codegen-units = 1
# opt-level = "z"
opt-level = 3
panic = "abort"

[dependencies]
mimalloc = { version = "*" }
eyre = { version = "*" }
color-eyre = { version = "*" }
clap = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
axum = { version = "*" }
axum-server = { version = "*", features = ["tls-rustls"] }
axum-extra = { version = "*", features = ["typed-header"] }
tower = { version = "*" }
rustls = { version = "*" }
k8s-openapi = { version = "*", default-features = false, features = [
    "std",
    "earliest",
] }
kube = { version = "*", features = ["admission", "client"] }
jsonptr = { version = "*" }
evalexpr = { version = "*" }
itertools = { version = "*" }
futures = { version = "*", features = ["alloc"] }
serde_json = { version = "*" }
macroweave = { version = "*" }
# gateway-api = { version = "0.19" }
# serde = { version = "1", features = ["derive"] }
# serde_yaml = { version = "0.9.33" }
# json-patch = { version = "4" }
# tracing = { version = "0.1" }
# tracing-error = { version = "0.2" }
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# tracing-opentelemetry = { version = "0.32" }
# opentelemetry = { version = "0.31" }
# opentelemetry_sdk = { version = "0.31" }
# opentelemetry-appender-tracing = { version = "0.31" }
# opentelemetry-otlp = { version = "0.31", default-features = false, features = [
#     "logs",
#     "trace",
#     "grpc-tonic",
# ] }
# opentelemetry-stdout = { version = "0.31" }
# smol = { version = "2" }
# blocking = { version = "1" }
# async-compat = { version = "0.2" }
# actix-web = { version = "4", features = ["rustls-0_23"] }
# rustls = { version = "0.23" }
# aws-lc-rs = { version = "1.14.1" }
# inotify = { version = "0.11" }
# itertools = { version = "0.14" }
# ouroboros = { version = "0.18" }
# random_str = { version = "1" }
# tracing-actix-web = { version = "0.7" }
