[package]
name = "path-k8s-webhook"
edition = "2024"
version = "2026.7.17"
description = "Kubernetes AdmissionControl webhook to validate or mutate specified resource via JSON path"
license = "Apache-2.0"
repository = "https://github.com/Magicloud/path-k8s-webhook"
keywords = ["Kubernetes", "Webhook"]
categories = ["config"]
readme = "README.md"

[profile.release]
strip = true
lto = true
codegen-units = 1
# opt-level = "z"
opt-level = 3
panic = "abort"

[dependencies]
mimalloc = { version = "*" }
eyre = { version = "*" }
color-eyre = { version = "*" }
clap = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
axum = { version = "*" }
axum-server = { version = "*", features = ["tls-rustls"] }
axum-extra = { version = "*", features = ["typed-header"] }
tower = { version = "*" }
rustls = { version = "*" }
k8s-openapi = { version = "*", default-features = false, features = [
    "std",
    "earliest",
] }
kube = { version = "*", features = ["admission", "client"] }
jsonptr = { version = "*" }
json-patch = { version = "*" }
evalexpr = { version = "*" }
itertools = { version = "*" }
futures = { version = "*", features = ["alloc"] }
serde_json = { version = "*" }
macroweave = { version = "*" }
inotify = { version = "*" }
crossfire = { version = "*" }
tracing = { version = "*" }
tracing-error = { version = "*" }
tracing-subscriber = { version = "*", features = ["env-filter"] }
# tracing-opentelemetry = { version = "0.32" }
# opentelemetry = { version = "0.31" }
# opentelemetry_sdk = { version = "0.31" }
# opentelemetry-appender-tracing = { version = "0.31" }
# opentelemetry-otlp = { version = "0.31", default-features = false, features = [
#     "logs",
#     "trace",
#     "grpc-tonic",
# ] }
# opentelemetry-stdout = { version = "0.31" }
# ouroboros = { version = "0.18" }
# random_str = { version = "1" }
# tracing-actix-web = { version = "0.7" }
